added all the individual components to the app structure

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,7 +59,7 @@
   }
 }
 .swiper-pagination-bullet {
-  background-color: #75560c !important;
+  background-color: #4f0bb6 !important;
   width: 1rem;
   height: 1rem;
   border-radius: 0.5rem;
